[package]
name = "acast-rss-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.28"
id3 = "1.8.0"
reqwest = "0.11.20"
rss = "2.0.6"
scraper = "0.17.1"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
